tests/typechecker/should_fail/external_functions_3.csp
external transpose, mtransclose, relational_image, relational_inverse_image

Z = relational_inverse_image(transpose({(0,true)}))(0) == 0

